--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,6 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  background-color: #fffde7;
+  font-family: 'Raleway', sans-serif;
 }
