--- a/src/components/Character/Character.css
+++ b/src/components/Character/Character.css
@@ -1,6 +1,72 @@
 img {
-    height: 200px;
-    width: 200px;
-    border: 5px solid rgb(204, 234, 255);
-    margin: 10px;
+  height: 150px;
+  width: 150px;
+  margin: 10px;
+  border: 5px solid rgb(204, 234, 255);
+  -webkit-box-shadow: 8px 11px 14px -2px rgba(173, 173, 173, 1);
+  -moz-box-shadow: 8px 11px 14px -2px rgba(173, 173, 173, 1);
+  box-shadow: 8px 11px 14px -2px rgba(173, 173, 173, 1);
+}
+
+.still {
+  border: 5px solid rgb(204, 234, 255);
+}
+
+.winner {
+  border: 5px solid rgb(169, 255, 183);
+}
+
+.shake {
+  border: 5px solid rgb(255, 86, 86);
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
+@media (min-width: 1500px) {
+    img {
+        height: 200px;
+        width: 200px;
+        margin: 10px;
+      }
+}
+
+@media (max-width: 787px) {
+    img {
+        height: 150px;
+        width: 150px;
+        margin: 10px;
+      }
+}
+
+@media (max-width: 575px) {
+    img {
+        height: 150px;
+        width: 150px;
+        margin: 10px;
+      }
 }
