--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,9 @@
 .footer {
     flex-shrink: 0;
     width: 100%;
-    height: 30px;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 20px;
     line-height: 30px;
     background-color: rgb(204, 234, 255);
 }
