--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,11 +1,74 @@
-div, ul {
-    width: 100%;
+div,
+ul {
+  width: 100%;
+  text-align: center;
 }
 
-li {
-    width: 33%;
+.navbar-brand {
+  font-size: 24px;
+  font-weight: 700;
+  margin-right: 0;
 }
 
-nav, .bg-light {
-    background-color: rgb(204, 234, 255)!important;
+.nav-text {
+  padding-top: 8px;
+  font-size: 20px;
+}
+
+nav,
+.navbar {
+  background-color: rgb(204, 234, 255) !important;
+  -webkit-box-shadow: 5px 7px 14px -2px rgba(173, 173, 173, 1);
+  -moz-box-shadow: 5px 7px 14px -2px rgba(173, 173, 173, 1);
+  box-shadow: 5px 7px 14px -2px rgba(173, 173, 173, 1);
+}
+
+/* @media (min-width: 992px) {
+    nav,
+    .navbar {
+      min-height: 60px;
+      flex-flow: row nowrap;
+      justify-content: flex-start;
+    }
+} */
+
+@media (min-width: 787px) {
+  nav,
+  .navbar {
+    min-height: 60px;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+  }
+}
+
+@media (max-width: 787px) {
+  nav,
+  .navbar {
+    min-height: 90px;
+  }
+
+  .nav-text {
+    padding-top: 4px;
+    font-size: 20px;
+  }
+
+  .navbar-brand {
+    padding-top: 12px;
+  }
+}
+
+@media (max-width: 575px) {
+  nav,
+  .navbar {
+    min-height: 110px;
+  }
+
+  .nav-text {
+    padding: 0;
+    font-size: 20px;
+  }
+
+  .navbar-brand {
+    padding: 0;
+  }
 }
